tests/diagnostics/variables/unused_variable/expect.txt
# exit: 1
input/main.lang0:2:5: error: unused variable 'x'
      x := 1
      ^
